Fix wrong font-family in two elements of the second section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -150,7 +150,7 @@
     font-size: 18px;
     line-height: 1.7;
 }
-.sect2-art-h3 {
+.sect2-art-p {
     line-height: 1.7;
     font-family: $p-font;
 }
